# OPPAC_NEUTRON_PROJECT

./: CMakeLists.txt  README.md  converter_optimization.C  exampleB4a.cc  plot_collimator_optimization.C  run1.mac  testrun.mac
Analysis/: PositionReconstruction  PositionReconstruction.cc  Position_reconstruction.cpp  check_positions.C  debug_reconstruction  debug_reconstruction.cpp  final_resolution.root  new.c  plot_reco.C  position_reconstruction  proper_reconstruction.C  reconstruction_from_txt.root  reconstruction_macro.C  reconstruction_results.root  results_1mm_highres.root  weighted_reconstruction.root
include/: ActionInitialization.hh  DetectorConstruction.hh  EventAction.hh  PrimaryGeneratorAction.hh  RunAction.hh  SensorData.hh  SensorHit.hh  SteppingAction.hh  detector.hh
src/: ActionInitialization.cc  DetectorConstruction.cc  EventAction.cc  PhysicsList.cc  PrimaryGeneratorAction.cc  RunAction.cc  SensorHit.cc  SteppingAction.cc  detector.cc
